--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 authors = ["Shaharyar Ahmed <shaharyar.ahmed1121@gmail.com>"]
 edition = "2018"
 description = "A minimal command line text editor developed using Rust"
-homepage = "https://aur.archlinux.org/packages/cell/"
+homepage = "https://shaharyarahmedbot.pythonanywhere.com/"
 repository = "https://github.com/ShaharyarAhmed-bot/cell"
 license = "GNU"
 
